--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
     border: 2px solid var(--border-color);
     padding: 40px;
     border-radius: 10px;
+    -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
     display: flex;
     flex-direction: column;
